src/test/resources/purescript_examples/failing/2379.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownClass\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Lib')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('test')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('x')
                  PsiElement(whitespace)(' ')
            PSArrayLiteralImpl(ArrayLiteral)
              PsiElement([)('[')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('1')
              PsiElement(,)(',')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('2')
              PsiElement(,)(',')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('3')
              PsiElement(])(']')
              PsiElement(whitespace)('\n')
